--- a/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
+++ b/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
@@ -397,7 +397,7 @@ $promo-max-width:   60em;
 
       &:first-child {
         margin-right: $block-padding;
-        width: 100% / 3 * 2;
+        width: 100 / 3 * 2%;
 
         img {
           height: 100%;
@@ -406,7 +406,7 @@ $promo-max-width:   60em;
       }
 
       &:last-child {
-        width: 100% / 3;
+        width: 100 / 3 * 1%;
 
         figcaption {
           width: 100%;
