--- a/src/assets/toolkit/styles/6-components/_components.search-panel.scss
+++ b/src/assets/toolkit/styles/6-components/_components.search-panel.scss
@@ -1,6 +1,6 @@
 /** Search panel full page with or mods. */
 
-$search-panel-shadow: 0 1px 5px rgba( $black, 25% ) !default;
+$search-panel-shadow: 0 1px 5px rgba( $black, .25 ) !default;
 
 
 .search-panel {
