--- a/src/assets/toolkit/styles/6-components/_components.site-header.scss
+++ b/src/assets/toolkit/styles/6-components/_components.site-header.scss
@@ -37,6 +37,7 @@ $logo-max-height: rem( 105px ); //TODO: Transfer to rems using function
       }
 
       input[type=submit] {
+        padding: .5em;
         width: 18%;
         max-height: rem( 45px );
         cursor: pointer;
@@ -288,7 +289,7 @@ $logo-max-height: rem( 105px ); //TODO: Transfer to rems using function
       form {
         width: 100%;
 
-        input[type=search] {  width: 100%; }
+        input[type=search] { width: 100%; }
 
         input[type=submit] {
           margin-top: .5rem;
