--- a/src/assets/toolkit/styles/6-components/_components.strip-banner.scss
+++ b/src/assets/toolkit/styles/6-components/_components.strip-banner.scss
@@ -37,12 +37,12 @@
       &:first-child {
         float: left;
         padding-bottom: 0;
-        width: 100% / 3 * 2;
+        width: 100 / 3 * 2%;
       }
 
       &:last-child {
         float: right;
-        width: 100% / 3;
+        width: 100 / 3 * 1%;
       }
     }
 
@@ -54,6 +54,10 @@
           margin-bottom: 0;
         }
       }
+    }
+
+    @include media( $desktop-and-bigger ) {
+      figure.photo figcaption { margin-top: 10%; }
     }
 
     @include media( $mobile-large-and-smaller ) {
@@ -70,12 +74,6 @@
         }
 
         &:last-child { width: 100%; }
-      }
-    }
-
-    @include media( $tablet-and-bigger ) {
-      figure.photo {
-        figcaption { margin-top: 10%; }
       }
     }
 
