--- a/src/assets/toolkit/styles/6-components/_components.study-areas.scss
+++ b/src/assets/toolkit/styles/6-components/_components.study-areas.scss
@@ -287,7 +287,7 @@ $tab-caret-size: 1.6rem;
   transform: scale( 1.4 ); //TODO: Do not scale, use font-size approach and relative units!
   background: $grey-alto;
   border-radius: 3px;
-  box-shadow: inset 0 1px 3px rgba( $black, 30% ), 0 1px rgba( $white, 10% );
+  box-shadow: inset 0 1px 3px rgba( $black, .3 ), 0 1px rgba( $white, .1 );
 
   .switch-label {
     z-index: $z-index-middle;
@@ -296,7 +296,7 @@ $tab-caret-size: 1.6rem;
     width: 116px;
     line-height: 26px;
     font-size: 11px;
-    color: rgba( $black-mine-shaft, 90% );
+    color: rgba( $black-mine-shaft, .9 );
     text-align: center;
     cursor: pointer;
 
