--- a/src/assets/toolkit/styles/6-components/navigation/_components.footer.scss
+++ b/src/assets/toolkit/styles/6-components/navigation/_components.footer.scss
@@ -27,7 +27,7 @@ $footer-primary-separator:  1px solid $black-emperor !default;
 
     > li { margin: 0 .35em; }
 
-    > a {
+    a {
       text-decoration: none;
       border-bottom: 0;
       color: inherit;
