--- a/src/assets/toolkit/styles/7-trumps/_trumps.colors.scss
+++ b/src/assets/toolkit/styles/7-trumps/_trumps.colors.scss
@@ -52,7 +52,7 @@
 
         figure {
           .play-button {
-            background-color: rgba( $color, 80% );
+            background-color: rgba( $color, .8 );
 
             &::after { border-color: transparent transparent transparent $white; }
           }
@@ -102,7 +102,7 @@
 
         li {
           a {
-            border-bottom-color: darken( $color, 10% );
+            border-bottom-color: darken( $color, .1 );
             font-size: rem( 19px );
           }
         }
@@ -110,7 +110,7 @@
     }
 
     .banner {
-      figcaption { background-color: rgba( $color, 70% ); }
+      figcaption { background-color: rgba( $color, .7 ); }
     }
   }
 
@@ -121,14 +121,14 @@
         h2,
         h3,
         p {
-          background-color: rgba( $color, 90% );
+          background-color: rgba( $color, .9 );
         }
       }
     }
   }
 
   .promo.themed {
-    background-color: rgba( $color, 90% );
+    background-color: rgba( $color, .9 );
 
     a {
       h1,
@@ -140,7 +140,7 @@
     }
 
     .play-button::after {
-      border-color: transparent transparent transparent rgba( $color, 90% );
+      border-color: transparent transparent transparent rgba( $color, .9 );
     }
   }
 }
